crates/lex-core/tests/snapshots/tokenizer_elements__list_flat_simple_numbered.snap
---
source: lex-parser/tests/tokenizer_elements.rs
expression: tokens
---
[
    (
        Text(
            "Test",
        ),
        0..4,
    ),
    (
        Colon,
        4..5,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        5..6,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        6..7,
    ),
    (
        Number(
            "1",
        ),
        7..8,
    ),
    (
        Period,
        8..9,
    ),
    (
        Whitespace(
            1,
        ),
        9..10,
    ),
    (
        Text(
            "First",
        ),
        10..15,
    ),
    (
        Whitespace(
            1,
        ),
        15..16,
    ),
    (
        Text(
            "numbered",
        ),
        16..24,
    ),
    (
        Whitespace(
            1,
        ),
        24..25,
    ),
    (
        Text(
            "item",
        ),
        25..29,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        29..30,
    ),
    (
        Number(
            "2",
        ),
        30..31,
    ),
    (
        Period,
        31..32,
    ),
    (
        Whitespace(
            1,
        ),
        32..33,
    ),
    (
        Text(
            "Second",
        ),
        33..39,
    ),
    (
        Whitespace(
            1,
        ),
        39..40,
    ),
    (
        Text(
            "numbered",
        ),
        40..48,
    ),
    (
        Whitespace(
            1,
        ),
        48..49,
    ),
    (
        Text(
            "item",
        ),
        49..53,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        53..54,
    ),
    (
        Number(
            "3",
        ),
        54..55,
    ),
    (
        Period,
        55..56,
    ),
    (
        Whitespace(
            1,
        ),
        56..57,
    ),
    (
        Text(
            "Third",
        ),
        57..62,
    ),
    (
        Whitespace(
            1,
        ),
        62..63,
    ),
    (
        Text(
            "numbered",
        ),
        63..71,
    ),
    (
        Whitespace(
            1,
        ),
        71..72,
    ),
    (
        Text(
            "item",
        ),
        72..76,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        76..77,
    ),
]
