crates/lex-core/tests/snapshots/tokenizer_elements__list_flat_simple_parenthetical.snap
---
source: lex-parser/tests/tokenizer_elements.rs
expression: tokens
---
[
    (
        Text(
            "Test",
        ),
        0..4,
    ),
    (
        Colon,
        4..5,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        5..6,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        6..7,
    ),
    (
        Number(
            "1",
        ),
        7..8,
    ),
    (
        Period,
        8..9,
    ),
    (
        Whitespace(
            1,
        ),
        9..10,
    ),
    (
        Text(
            "First",
        ),
        10..15,
    ),
    (
        Whitespace(
            1,
        ),
        15..16,
    ),
    (
        Text(
            "item",
        ),
        16..20,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        20..21,
    ),
    (
        Dash,
        21..22,
    ),
    (
        Whitespace(
            1,
        ),
        22..23,
    ),
    (
        Text(
            "Second",
        ),
        23..29,
    ),
    (
        Whitespace(
            1,
        ),
        29..30,
    ),
    (
        Text(
            "item",
        ),
        30..34,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        34..35,
    ),
    (
        Text(
            "a",
        ),
        35..36,
    ),
    (
        Period,
        36..37,
    ),
    (
        Whitespace(
            1,
        ),
        37..38,
    ),
    (
        Text(
            "Third",
        ),
        38..43,
    ),
    (
        Whitespace(
            1,
        ),
        43..44,
    ),
    (
        Text(
            "item",
        ),
        44..48,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        48..49,
    ),
]
