crates/lex-core/tests/snapshots/tokenizer_elements__list_nested_mixed_content.snap
---
source: lex-parser/tests/tokenizer_elements.rs
expression: tokens
---
[
    (
        Text(
            "Test",
        ),
        0..4,
    ),
    (
        Colon,
        4..5,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        5..6,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        6..7,
    ),
    (
        Dash,
        7..8,
    ),
    (
        Whitespace(
            1,
        ),
        8..9,
    ),
    (
        Text(
            "First",
        ),
        9..14,
    ),
    (
        Whitespace(
            1,
        ),
        14..15,
    ),
    (
        Text(
            "item",
        ),
        15..19,
    ),
    (
        Whitespace(
            1,
        ),
        19..20,
    ),
    (
        Text(
            "with",
        ),
        20..24,
    ),
    (
        Whitespace(
            1,
        ),
        24..25,
    ),
    (
        Text(
            "nested",
        ),
        25..31,
    ),
    (
        Whitespace(
            1,
        ),
        31..32,
    ),
    (
        Text(
            "content",
        ),
        32..39,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        39..40,
    ),
    (
        Indent(
            [
                (
                    Indentation,
                    40..44,
                ),
            ],
        ),
        0..0,
    ),
    (
        Text(
            "This",
        ),
        44..48,
    ),
    (
        Whitespace(
            1,
        ),
        48..49,
    ),
    (
        Text(
            "is",
        ),
        49..51,
    ),
    (
        Whitespace(
            1,
        ),
        51..52,
    ),
    (
        Text(
            "a",
        ),
        52..53,
    ),
    (
        Whitespace(
            1,
        ),
        53..54,
    ),
    (
        Text(
            "paragraph",
        ),
        54..63,
    ),
    (
        Whitespace(
            1,
        ),
        63..64,
    ),
    (
        Text(
            "nested",
        ),
        64..70,
    ),
    (
        Whitespace(
            1,
        ),
        70..71,
    ),
    (
        Text(
            "inside",
        ),
        71..77,
    ),
    (
        Whitespace(
            1,
        ),
        77..78,
    ),
    (
        Text(
            "the",
        ),
        78..81,
    ),
    (
        Whitespace(
            1,
        ),
        81..82,
    ),
    (
        Text(
            "list",
        ),
        82..86,
    ),
    (
        Whitespace(
            1,
        ),
        86..87,
    ),
    (
        Text(
            "item",
        ),
        87..91,
    ),
    (
        Period,
        91..92,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        92..93,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        93..94,
    ),
    (
        Dash,
        98..99,
    ),
    (
        Whitespace(
            1,
        ),
        99..100,
    ),
    (
        Text(
            "Nested",
        ),
        100..106,
    ),
    (
        Whitespace(
            1,
        ),
        106..107,
    ),
    (
        Text(
            "list",
        ),
        107..111,
    ),
    (
        Whitespace(
            1,
        ),
        111..112,
    ),
    (
        Text(
            "item",
        ),
        112..116,
    ),
    (
        Whitespace(
            1,
        ),
        116..117,
    ),
    (
        Text(
            "one",
        ),
        117..120,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        120..121,
    ),
    (
        Dash,
        125..126,
    ),
    (
        Whitespace(
            1,
        ),
        126..127,
    ),
    (
        Text(
            "Nested",
        ),
        127..133,
    ),
    (
        Whitespace(
            1,
        ),
        133..134,
    ),
    (
        Text(
            "list",
        ),
        134..138,
    ),
    (
        Whitespace(
            1,
        ),
        138..139,
    ),
    (
        Text(
            "item",
        ),
        139..143,
    ),
    (
        Whitespace(
            1,
        ),
        143..144,
    ),
    (
        Text(
            "two",
        ),
        144..147,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        147..148,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        148..149,
    ),
    (
        Text(
            "Another",
        ),
        153..160,
    ),
    (
        Whitespace(
            1,
        ),
        160..161,
    ),
    (
        Text(
            "paragraph",
        ),
        161..170,
    ),
    (
        Whitespace(
            1,
        ),
        170..171,
    ),
    (
        Text(
            "after",
        ),
        171..176,
    ),
    (
        Whitespace(
            1,
        ),
        176..177,
    ),
    (
        Text(
            "the",
        ),
        177..180,
    ),
    (
        Whitespace(
            1,
        ),
        180..181,
    ),
    (
        Text(
            "nested",
        ),
        181..187,
    ),
    (
        Whitespace(
            1,
        ),
        187..188,
    ),
    (
        Text(
            "list",
        ),
        188..192,
    ),
    (
        Period,
        192..193,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        193..194,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        194..195,
    ),
    (
        Dedent(
            [],
        ),
        0..0,
    ),
    (
        Dash,
        195..196,
    ),
    (
        Whitespace(
            1,
        ),
        196..197,
    ),
    (
        Text(
            "Second",
        ),
        197..203,
    ),
    (
        Whitespace(
            1,
        ),
        203..204,
    ),
    (
        Text(
            "item",
        ),
        204..208,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        208..209,
    ),
    (
        Indent(
            [
                (
                    Indentation,
                    209..213,
                ),
            ],
        ),
        0..0,
    ),
    (
        Text(
            "Final",
        ),
        213..218,
    ),
    (
        Whitespace(
            1,
        ),
        218..219,
    ),
    (
        Text(
            "paragraph",
        ),
        219..228,
    ),
    (
        Period,
        228..229,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        229..230,
    ),
    (
        Dedent(
            [],
        ),
        0..0,
    ),
]
