crates/lex-core/tests/snapshots/tokenizer_elements__list_nested_simple.snap
---
source: lex-parser/tests/tokenizer_elements.rs
expression: tokens
---
[
    (
        Text(
            "Test",
        ),
        0..4,
    ),
    (
        Colon,
        4..5,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        5..6,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        6..7,
    ),
    (
        Text(
            "I",
        ),
        7..8,
    ),
    (
        Period,
        8..9,
    ),
    (
        Whitespace(
            1,
        ),
        9..10,
    ),
    (
        Text(
            "First",
        ),
        10..15,
    ),
    (
        Whitespace(
            1,
        ),
        15..16,
    ),
    (
        Text(
            "roman",
        ),
        16..21,
    ),
    (
        Whitespace(
            1,
        ),
        21..22,
    ),
    (
        Text(
            "item",
        ),
        22..26,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        26..27,
    ),
    (
        Text(
            "II",
        ),
        27..29,
    ),
    (
        Period,
        29..30,
    ),
    (
        Whitespace(
            1,
        ),
        30..31,
    ),
    (
        Text(
            "Second",
        ),
        31..37,
    ),
    (
        Whitespace(
            1,
        ),
        37..38,
    ),
    (
        Text(
            "roman",
        ),
        38..43,
    ),
    (
        Whitespace(
            1,
        ),
        43..44,
    ),
    (
        Text(
            "item",
        ),
        44..48,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        48..49,
    ),
    (
        Text(
            "III",
        ),
        49..52,
    ),
    (
        Period,
        52..53,
    ),
    (
        Whitespace(
            1,
        ),
        53..54,
    ),
    (
        Text(
            "Third",
        ),
        54..59,
    ),
    (
        Whitespace(
            1,
        ),
        59..60,
    ),
    (
        Text(
            "roman",
        ),
        60..65,
    ),
    (
        Whitespace(
            1,
        ),
        65..66,
    ),
    (
        Text(
            "item",
        ),
        66..70,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        70..71,
    ),
]
