crates/lex-core/tests/snapshots/tokenizer_elements__paragraph_flat_multiline.snap
---
source: lex-parser/tests/tokenizer_elements.rs
expression: tokens
---
[
    (
        Text(
            "This",
        ),
        0..4,
    ),
    (
        Whitespace(
            1,
        ),
        4..5,
    ),
    (
        Text(
            "is",
        ),
        5..7,
    ),
    (
        Whitespace(
            1,
        ),
        7..8,
    ),
    (
        Text(
            "a",
        ),
        8..9,
    ),
    (
        Whitespace(
            1,
        ),
        9..10,
    ),
    (
        Text(
            "multi",
        ),
        10..15,
    ),
    (
        Dash,
        15..16,
    ),
    (
        Text(
            "line",
        ),
        16..20,
    ),
    (
        Whitespace(
            1,
        ),
        20..21,
    ),
    (
        Text(
            "paragraph",
        ),
        21..30,
    ),
    (
        Period,
        30..31,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        31..32,
    ),
    (
        Text(
            "It",
        ),
        32..34,
    ),
    (
        Whitespace(
            1,
        ),
        34..35,
    ),
    (
        Text(
            "continues",
        ),
        35..44,
    ),
    (
        Whitespace(
            1,
        ),
        44..45,
    ),
    (
        Text(
            "on",
        ),
        45..47,
    ),
    (
        Whitespace(
            1,
        ),
        47..48,
    ),
    (
        Text(
            "the",
        ),
        48..51,
    ),
    (
        Whitespace(
            1,
        ),
        51..52,
    ),
    (
        Text(
            "second",
        ),
        52..58,
    ),
    (
        Whitespace(
            1,
        ),
        58..59,
    ),
    (
        Text(
            "line",
        ),
        59..63,
    ),
    (
        Period,
        63..64,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        64..65,
    ),
    (
        Text(
            "And",
        ),
        65..68,
    ),
    (
        Whitespace(
            1,
        ),
        68..69,
    ),
    (
        Text(
            "even",
        ),
        69..73,
    ),
    (
        Whitespace(
            1,
        ),
        73..74,
    ),
    (
        Text(
            "has",
        ),
        74..77,
    ),
    (
        Whitespace(
            1,
        ),
        77..78,
    ),
    (
        Text(
            "a",
        ),
        78..79,
    ),
    (
        Whitespace(
            1,
        ),
        79..80,
    ),
    (
        Text(
            "third",
        ),
        80..85,
    ),
    (
        Whitespace(
            1,
        ),
        85..86,
    ),
    (
        Text(
            "line",
        ),
        86..90,
    ),
    (
        Period,
        90..91,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        91..92,
    ),
]
