crates/lex-core/tests/snapshots/tokenizer_elements__session_flat_numbered.snap
---
source: lex-parser/tests/tokenizer_elements.rs
expression: tokens
---
[
    (
        Text(
            "Introduction",
        ),
        0..12,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        12..13,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        13..14,
    ),
    (
        Indent(
            [
                (
                    Indentation,
                    14..18,
                ),
            ],
        ),
        0..0,
    ),
    (
        Text(
            "This",
        ),
        18..22,
    ),
    (
        Whitespace(
            1,
        ),
        22..23,
    ),
    (
        Text(
            "is",
        ),
        23..25,
    ),
    (
        Whitespace(
            1,
        ),
        25..26,
    ),
    (
        Text(
            "a",
        ),
        26..27,
    ),
    (
        Whitespace(
            1,
        ),
        27..28,
    ),
    (
        Text(
            "simple",
        ),
        28..34,
    ),
    (
        Whitespace(
            1,
        ),
        34..35,
    ),
    (
        Text(
            "session",
        ),
        35..42,
    ),
    (
        Whitespace(
            1,
        ),
        42..43,
    ),
    (
        Text(
            "with",
        ),
        43..47,
    ),
    (
        Whitespace(
            1,
        ),
        47..48,
    ),
    (
        Text(
            "a",
        ),
        48..49,
    ),
    (
        Whitespace(
            1,
        ),
        49..50,
    ),
    (
        Text(
            "title",
        ),
        50..55,
    ),
    (
        Whitespace(
            1,
        ),
        55..56,
    ),
    (
        Text(
            "and",
        ),
        56..59,
    ),
    (
        Whitespace(
            1,
        ),
        59..60,
    ),
    (
        Text(
            "one",
        ),
        60..63,
    ),
    (
        Whitespace(
            1,
        ),
        63..64,
    ),
    (
        Text(
            "paragraph",
        ),
        64..73,
    ),
    (
        Whitespace(
            1,
        ),
        73..74,
    ),
    (
        Text(
            "of",
        ),
        74..76,
    ),
    (
        Whitespace(
            1,
        ),
        76..77,
    ),
    (
        Text(
            "content",
        ),
        77..84,
    ),
    (
        Period,
        84..85,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        85..86,
    ),
    (
        Dedent(
            [],
        ),
        0..0,
    ),
]
